@@ -3,6 +3,34 @@ require File.expand_path("#{File.dirname(__FILE__)}/../../unit_spec_helper")
 module JsTestCore
   module Resources
     describe SpecFile do
+      describe "Configuration" do
+        attr_reader :doc
+        before do
+          JsTestCore::Representations::Spec.project_js_files += ["/javascripts/test_file_1.js", "/javascripts/test_file_2.js"]
+          JsTestCore::Representations::Spec.project_css_files += ["/stylesheets/test_file_1.css", "/stylesheets/test_file_2.css"]
+
+          response = get(SpecFile.path("/failing_spec"))
+          response.should be_http( 200, {}, "" )
+
+          @doc = Nokogiri::HTML(response.body)
+        end
+
+        after do
+          JsTestCore::Representations::Spec.project_js_files.clear
+          JsTestCore::Representations::Spec.project_css_files.clear
+        end
+
+        it "renders project js files" do
+          doc.at("script[@src='/javascripts/test_file_1.js']").should_not be_nil
+          doc.at("script[@src='/javascripts/test_file_2.js']").should_not be_nil
+        end
+
+        it "renders project css files" do
+          doc.at("link[@href='/stylesheets/test_file_1.css']").should_not be_nil
+          doc.at("link[@href='/stylesheets/test_file_2.css']").should_not be_nil
+        end
+      end
+
       describe "Files" do
         describe "GET /specs/failing_spec" do
           it "renders a suite only for failing_spec.js as text/html" do
