@@ -1,3 +1,4 @@
+- Added JsTestCore::Representations::Spec.project_js_files and .project_css_files
 - Updated to erector 0.6.7, which fixes a bug related to including modules into Representations.
 - Allow test suite to clear all cookies
 - No longer using the /implementanions directory. Replace all cases of /implementations with /javascripts.
